[1.35] update links to guide.html - faq/ports/index.html

--- a/faq/ports/index.html
+++ b/faq/ports/index.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang=ru id=faq>
 
-<!-- If you make edits to any FAQ documents, please start each sentence
-     on a new line, and try to keep the general formatting consistent
-     with the rest of the pages -->
-
 <title>Настольная книга по портам OpenBSD</title>
 <meta name= "description"   content= "the OpenBSD Porter's Handbook">
 <meta charset=utf-8>
@@ -37,28 +33,28 @@
   <li><a href="ports.html#PkgSig"       >Сигнатура пакетов</a>
 </ul>
 
-<h3><a href="https://openbsd.org/faq/ports/guide.html">Руководство по портам OpenBSD</a></h3>
+<h3><a href="guide.html">Руководство по портам OpenBSD</a></h3>
 <ul>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#Overview"         >Обзор</a>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsChecklist"   >Porting Checklist</a>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsComplex"     >Обработка сложных ситуаций</a>
+  <li><a href="guide.html#Overview"         >Обзор</a>
+  <li><a href="guide.html#PortsChecklist"   >Porting Checklist</a>
+  <li><a href="guide.html#PortsComplex"     >Обработка сложных ситуаций</a>
   <ul>
-    <li><a href="https://openbsd.org/faq/ports/guide.html#Know"           >Будь знакомым с самой программой</a>
-    <li><a href="https://openbsd.org/faq/ports/guide.html#Figure"         >Определить важные параметры</a>
-    <li><a href="https://openbsd.org/faq/ports/guide.html#Ideal"          >Идеальный случай: MULTI_PACKAGES
+    <li><a href="guide.html#Know"           >Будь знакомым с самой программой</a>
+    <li><a href="guide.html#Figure"         >Определить важные параметры</a>
+    <li><a href="guide.html#Ideal"          >Идеальный случай: MULTI_PACKAGES
                                              и PSEUDO_FLAVORS</a>
-    <li><a href="https://openbsd.org/faq/ports/guide.html#Inter"          >Взаимозависимость между subpackages</a>
-    <li><a href="https://openbsd.org/faq/ports/guide.html#True"           >Взаимозависимость FLAVORS и PKGNAMES</a>
+    <li><a href="guide.html#Inter"          >Взаимозависимость между subpackages</a>
+    <li><a href="guide.html#True"           >Взаимозависимость FLAVORS и PKGNAMES</a>
   </ul>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsUpdate"      >Обновление портов</a>
+  <li><a href="guide.html#PortsUpdate"      >Обновление портов</a>
   <ul>
-    <li><a href="https://openbsd.org/faq/ports/guide.html#UpdateChecklist">Обновление Checklist</a>
+    <li><a href="guide.html#UpdateChecklist">Обновление Checklist</a>
   </ul>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsPolicy"      >Политика OpenBSD касательно портов</a>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsSecurity"    >Рекомендации безопасности</a>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsGeneric"     >Основные советы по поводу портов</a>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsOther"       >Другие советы, которые могут помочь</a>
-  <li><a href="https://openbsd.org/faq/ports/guide.html#PortsAvail"       >Дополнительная информация</a>
+  <li><a href="guide.html#PortsPolicy"      >Политика OpenBSD касательно портов</a>
+  <li><a href="guide.html#PortsSecurity"    >Рекомендации безопасности</a>
+  <li><a href="guide.html#PortsGeneric"     >Основные советы по поводу портов</a>
+  <li><a href="guide.html#PortsOther"       >Другие советы, которые могут помочь</a>
+  <li><a href="guide.html#PortsAvail"       >Дополнительная информация</a>
 </ul>
 
 <h3><a href="https://openbsd.org/faq/ports/specialtopics.html">Особые темы, касательно портов</a></h3>
@@ -105,7 +101,7 @@
 <a href="https://man.openbsd.org/ports">ports(7)</a>.
 
 <p>
-Базовая операционная система OpenBSD довольно самодостаточная сама по себе.
+Базовая часть операционной системы OpenBSD довольно самодостаточна.
 Однако существует большое количество стороннего ПО, которое можно использовать
 в дополнение к базовой системе. Разработчики OpenBSD проделали большую работу,
 чтобы сделать многие тысячи сторонних программ доступными в виде
