--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -42,11 +42,13 @@
         Релиз
         <a href="https://www.opensmtpd.org/announces/release-6.6.0.txt">OpenSMTPD 6.6</a>
         состоялся 26 октября 2019 года<br>
-        Последняя minor-версия OpenSMTPD 6.6.2 вышла 28 января 2020 года<br>
-        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.2.tar.gz">OpenBSD версия</a>
-       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.2.sum.sig">sha256</a>] &ndash;
-        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.2p1.tar.gz">Портированная версия</a>
-       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.2p1.sum.sig">sha256</a>]
+        Последняя minor-версия OpenSMTPD 6.6.4 вышла 24 февраля 2020 года<br>
+        <!-- XXX
+        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.4.tar.gz">OpenBSD версия</a>
+       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.4.sum.sig">sha256</a>] &ndash;
+        -->
+        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.4p1.tar.gz">Портированная версия</a>
+       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.4p1.sum.sig">sha256</a>]
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong> реализацию серверной
