[1.808] sync - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -103,17 +103,23 @@ OpenBSD можно скачать через HTTP(s) или FTP.
          syspatch/ and tools/)
 </ul>
 
-<p>
-В дополнее к вышесказанному, зеркала должны использовать second-level
-зеркала в качестве upstream.
+Также:
+ 
+<ul>
+  <li>использовать структуру каталогов, показанную выше, с файлами в
+      <strong>/pub/OpenBSD</strong>
+  <li>использовать second-level зеркало в качестве upstream - без
+      связки/цепочки зеркал
+</ul>
 
 <p>
-Начиная с 6.5 минимальное требуемое место на диске составляет приблизительно
-700 Гб. Однако для уменьшения проблем при обновлении пакетов для снапшотов
-рекомендуется использовать rsync параметры <kbd>--delete-delay --delay-updates</kbd>,
-которые будут использовать лишь дополнительное место.
-<kbd>--fuzzy</kbd> также может быть полезен для уменьшения объема данных,
-передаваемых при обновлении пакетов для снапшотов.
+Начиная с марта 2020 минимальное требуемое место на диске составляет приблизительно
+750 Гб. Однако для уменьшения проблем пользователей при обновлении пакетов для
+снапшотов настроятельно рекомендуется использовать rsync параметры
+<kbd>--delete-delay --delay-updates</kbd>, которые будут использовать
+дополнительное место на диске в процессе обновления.
+<kbd>--fuzzy</kbd> также может быть полезен для уменьшения
+объема данных, передаваемых при обновлении пакетов для снапшотов.
 В зависимости от свободного места, зеркала могут предоставлять больше.
 Например, репозитории для старых релизов, репозиторий с исходниками и т.д.
 
