[1.43] update link to mail.html - faq/ports/testing.html

--- a/faq/ports/testing.html
+++ b/faq/ports/testing.html
@@ -46,7 +46,7 @@
 достаточной для этого процесса квалификацией. Это не верно. Каждый может помочь
 разработчикам (тем, кто занимается портированием софта) делать свою работу лучше
 и быстрее. Тестируйте обновления или новые порты, о которых сообщается в
-<a href="https://www.openbsd.org/mail.html">рассылке, посвященной портам</a>.
+<a href="../../mail.html">рассылке, посвященной портам</a>.
 Делая это, вы уменьшаете задержку последюущих коммитов, а также увеличиваете
 количество портов, добавляемых в саму систему. Многие порты не добавленны
 лишь по причине того, что они до сих пор не протестированны.
